<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="17dp"
    android:paddingRight="17dp"
    android:weightSum="1"
    style="@android:style/Widget.PopupWindow">

    <EditText android:id="@+id/account_auth_register_edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account_auth_register_hint_username"
        android:inputType="text|textPersonName"
        android:layout_weight="0.04"
        android:singleLine="false"
        style="@android:style/Widget.EditText"
        android:padding="10dp"
        android:layout_marginTop="30dp"/>
    <EditText android:id="@+id/account_auth_register_edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textEmailAddress"
        android:hint="@string/account_auth_register_hint_email"
        android:padding="10dp"
        android:layout_weight="0.04"
        style="@android:style/Widget.EditText"
        android:layout_marginTop="10dp"/>
    <EditText android:id="@+id/account_auth_register_edit_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text|textVisiblePassword"
        android:hint="@string/account_auth_register_hint_pw"
        android:padding="10dp"
        android:layout_weight="0.04"
        style="@android:style/Widget.EditText"/>
    <EditText android:id="@+id/account_auth_register_edit_pw_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text|textPassword"
        android:hint="@string/account_auth_register_hint_pw_check"
        android:padding="10dp"
        android:layout_weight="0.01"
        android:visibility="gone"
    />
    <EditText android:id="@+id/account_auth_register_edit_reg_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text|textNoSuggestions"
        android:hint="@string/account_auth_register_hint_reg_code"
        android:padding="10dp"
        android:layout_weight="0.04"
        style="@android:style/Widget.EditText"/>

    <Button android:id="@+id/account_auth_register_btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_auth_register_btn_submit"
        android:layout_weight="0.04"
        android:layout_marginTop="30dp"
        style="@android:style/Widget.Button"/>

</LinearLayout>
